dnl-------------------------------------------------------------------------dnl
dnl draco/src/POOMA_MT configure.in
dnl Randy M. Roberts
dnl Sun Aug 22 08:26:11 1999
dnl $Id$
dnl-------------------------------------------------------------------------dnl
dnl @> configure.in for POOMA_MT
dnl-------------------------------------------------------------------------dnl
dnl $Id$
dnl-------------------------------------------------------------------------dnl

AC_INIT(PoomaMesh_XYZ.hh)
AC_CONFIG_AUX_DIR(../../config)
AC_CONFIG_HEADER(POOMA_MT/config.h:config.h.in)
package="POOMA_MT"

AC_INSTALL_HEADERS
AC_INSTALL_LIB

AC_MPI_SETUP(pkg)
AC_POOMA_SETUP(pkg)

AC_NEEDS_LIBS(c4 ds++)
AC_NEEDS_LIBS_TEST(meshTest)
AC_RUNTESTS(tcfav tcctf tfcdtf tnctf tvctf txyz tbstf tvec, 1 3)

dnl turn off strict checking in this package
enable_strict_ansi=no

AC_DRACO_ENV

AC_SUBST(POOMA_ROOT)dnl
AC_SUBST(POOMA_ARCH)dnl

AC_DEFINE_UNQUOTED(POOMA_MT_POOMA_INCLUDE, ${POOMA_ROOT}/src/)

AC_OUTPUT(Makefile.POOMA \
          Makefile:../../config/Makefile.package.in \
          test/Makefile:../../config/Makefile.test.in\
          test/test.in:test/test.in.in)

dnl-------------------------------------------------------------------------dnl
dnl			 end of draco/src/POOMA_MT configure.in
dnl-------------------------------------------------------------------------dnl
