dnl-------------------------------------------------------------------------dnl
dnl draco/src/RTT_Format_Reader configure.in
dnl Todd Adams
dnl Tue Sep 21 15:09:59 1999
dnl $Id$
dnl-------------------------------------------------------------------------dnl
dnl @> configure.in for RTT_Format_Reader
dnl-------------------------------------------------------------------------dnl

AC_INIT(RTT_Format_Reader.hh)
AC_CONFIG_AUX_DIR(../../config)
AC_CONFIG_HEADER(RTT_Format_Reader/config.h:config.h.in)
package="RTT_Format_Reader"

dnl VENDOR SETUPS
dnl AC_MPI_SETUP(pkg)
dnl AC_SHMEM_SETUP(pkg)
dnl AC_SPRNG_SETUP(pkg)
dnl AC_PCGLIB_SETUP(pkg)

AC_INSTALL_HEADERS
AC_INSTALL_LIB
AC_NEEDS_LIBS(meshReaders ds++)
AC_NEEDS_LIBS_TEST(UnitTestFrame)

AC_RUNTESTS(TestRTTFormatReader TestRTTMeshReader, scalar)

dnl DRACO SETUP
AC_DRACO_ENV

AC_OUTPUT(Makefile:../../config/Makefile.package.in   \
          test/Makefile:../../config/Makefile.test.in \
          test/rttdef.mesh:test/rttdef.mesh.in)

dnl-------------------------------------------------------------------------dnl
dnl			 end of draco/src/RTT_Format_Reader configure.in
dnl-------------------------------------------------------------------------dnl
