dnl-------------------------------------------------------------------------dnl
dnl draco/src/cdi configure.in
dnl Kelly Thompson
dnl Thu Jun 22 16:18:14 2000
dnl $Id$
dnl-------------------------------------------------------------------------dnl
dnl @> configure.in for cdi
dnl-------------------------------------------------------------------------dnl

AC_INIT(CDI.hh)
dnl should the above line include "Opacity.hh" and "GandolfWrapper.hh"???
AC_CONFIG_AUX_DIR(../../config)
AC_CONFIG_HEADER(cdi/config.h:config.h.in)
package="cdi"

AC_MPI_SETUP(pkg)
dnl AC_POOMA_SETUP(pkg)

dnl VENDOR SETUPS
dnl AC_MPI_SETUP(pkg)
dnl AC_SHMEM_SETUP(pkg)
dnl AC_SPRNG_SETUP(pkg)
dnl AC_PCGLIB_SETUP(pkg)

AC_INSTALL_HEADERS
AC_INSTALL_LIB
AC_NEEDS_LIBS(ds++)
AC_NEEDS_LIBS_TEST(UnitTestFrame c4)

AC_RUNTESTS(tCDI, 1)

dnl DRACO SETUP
AC_DRACO_ENV

AC_OUTPUT(Makefile:../../config/Makefile.package.in \
          test/Makefile:../../config/Makefile.test.in)

dnl-------------------------------------------------------------------------dnl
dnl			 end of draco/src/cdi configure.in
dnl-------------------------------------------------------------------------dnl
