dnl-------------------------------------------------------------------------dnl
dnl draco/src/cdi_analytic configure.in
dnl Thomas M. Evans
dnl Fri Aug 24 12:28:30 2001
dnl $Id$
dnl-------------------------------------------------------------------------dnl
dnl @> configure.in for cdi_analytic
dnl-------------------------------------------------------------------------dnl

AC_INIT(Analytic_Gray_Opacity.hh)
AC_CONFIG_AUX_DIR(../../config)
AC_CONFIG_HEADER(cdi_analytic/config.h:config.h.in)
package="cdi_analytic"

dnl VENDOR SETUPS
dnl AC_MPI_SETUP(pkg)
dnl AC_SHMEM_SETUP(pkg)
dnl AC_SPRNG_SETUP(pkg)
dnl AC_PCGLIB_SETUP(pkg)

AC_INSTALL_HEADERS
AC_INSTALL_LIB
AC_NEEDS_LIBS(cdi ds++)

AC_RUNTESTS()

dnl DRACO SETUP
AC_DRACO_ENV

AC_OUTPUT(Makefile:../../config/Makefile.package.in \
          test/Makefile:../../config/Makefile.test.in)

dnl-------------------------------------------------------------------------dnl
dnl			 end of draco/src/cdi_analytic configure.in
dnl-------------------------------------------------------------------------dnl
